--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -187,7 +187,7 @@
             <h2 class="title-bg">Test Output</h2>
             <div class="row">
                 <div class="span12">
-                    <a href="/tests" alt="website">
+                    <a href="/tech/tests" alt="website">
                     <button class="btn btn-warning pull-left" type="button">
                       <div style="color: white">Run Tests</div>
                     </button>
@@ -198,9 +198,9 @@
             <h2 class="title-bg">NBA API</h2>
             <div class="row">
                 <div class="span12">
-                    <a href="/nba" alt="website">
+                    <a href="/tech/nba" alt="website">
                     <button class="btn btn-warning pull-left" type="button">
-                      <div style="color: white">Run Tests</div>
+                      <div style="color: white">NBA Page</div>
                     </button>
                     </a>
                 </div>
