--- a/app/templates/nba.html
+++ b/app/templates/nba.html
@@ -171,16 +171,17 @@
 
     <div class="row">
         <div class="span12">
-            <h3>Hollinger Scores for teams and players</h3>
-            John Hollinger is currently the Vice President of Basketball Operations for the Memphis Grizzlies and has worked as an analyst for ESPN. During the late 90s, he developed the Player Efficiency Rating (PER) which attempts to combine all of a player's contributions into one number. Hollinger later developed a simpler formula as an extension to the PER as an attempt to quantify a player's performance in a given game. Instead of applying it to players, we used this simpler formula with the NBA DB API to find the most efficient teams in a given season.<br/>
+            <h3>Hollinger Score for teams</h3>
+            John Hollinger is currently the Vice President of Basketball Operations for the Memphis Grizzlies and has worked as an analyst for ESPN. During the late 90s, he developed the Player Efficiency Rating (PER) which attempts to combine all of a player's contributions into one number. Hollinger later developed a simpler formula as an extension to the PER as an attempt to quantify a player's performance in a given game. Instead of applying it to players, we used this simpler formula with the NBA DB API to find the most efficient teams in a given season.
+
             
-            <strong>Top 5 teams for 2012</strong>
+            <h3>Top 5 teams for 2012<h3>
             <canvas id="hch12" width="600" height="400"></canvas>
 
-          	<strong>Top 5 teams for 2013</strong>
+          	<h3>Top 5 teams for 2013<h3>
             <canvas id="hch13" width="600" height="400"></canvas>
 
-            <strong>Top 5 teams for 2014</strong>
+            <h3>Top 5 teams for 2014<h3>
             <canvas id="hch14" width="600" height="400"></canvas>
 
 
