Got tests working finally

--- a/app/templates/challengetempl.html
+++ b/app/templates/challengetempl.html
@@ -204,7 +204,7 @@ $(document).ready(function () {
               <p class="quote-text side">[[ runs[ridx].name ]]</p>
             </a>
           </div>
-          <h5 class="title-bg">Related Challenges</h5>
+          <h5 class="title-bg">Related Themes</h5>
           <div ng-repeat="tidx in themesIDs">
             <a ng-href="http://104.239.139.43:8000/themes/[[ themes[tidx].id ]]">
               <p class="quote-text side">[[ themes[tidx].name ]]</p>
