--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -230,7 +230,7 @@
                     by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development and version control. </p>
                     <li><strong>Rackspace</strong></li>
                     <p> Rackspace has allowed our team to host our application using one of their virtual machines which has 1gb RAM and 20gb of storage. </p>
-                    <li><strong>AngularJS</strong></li>
+                    <li><strong>Javascript/AngularJS</strong></li>
                     <p> Angular is a web application framework that allows us to dynamically fill the pages with content. We utilized Angular by calling GET on our RESTful API and using the content to fill a template page for each race/theme/challenge. It has been a great tool for separating our front end from the back end.</p>
                     <li><strong>Jinja2</strong></li>
                     <p> Jinja is a templating framework that comes with Flask. It allows us to push information through our funruns app file straight to the page, but is not a good way to decouple the front end from the back end. Therefore, it is used sparingly and only in the template pages to provide an ID of what page to load.</p>
