Fixed minor bug

--- a/app/templates/nba.html
+++ b/app/templates/nba.html
@@ -80,7 +80,7 @@
     labels: ["San Antonio Spurs", "Los Angeles Clippers", "Minnesota Timberwolves", "Dallas Mavericks", "Oklahoma City Thunder"],
     datasets: [
     {
-        label: "Total number of jobs",
+        label: "5 most efficient teams",
         fillColor: "rgba(216,69,11,0.9)",
         strokeColor: "rgba(216,69,11,0.5)",
         highlightFill: "rgba(255,140,0,0.5)",
@@ -96,7 +96,7 @@
     labels: ["Golden State Warriors", "Los Angeles Clippers", "San Antonio Spurs", "Atlanta Hawks", "Memphis Grizzlies"],
     datasets: [
     {
-        label: "Total number of jobs",
+        label: "5 most efficient teams",
         fillColor: "rgba(216,69,11,0.9)",
         strokeColor: "rgba(216,69,11,0.5)",
         highlightFill: "rgba(255,140,0,0.5)",
